notes documentation fixed, process creation bugfixed, rooms endpoint done and documented
